[package]
name = "burner_watcher"
version = "0.1.0"
authors = ["Tim Sweeney <mainetim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.6.2"
gpio-cdev = "0.2"
log = "0.4.8"
rusqlite = { version = "*", features = ["bundled"] }
toml = "0.5"
